# sosa-compiler

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  benchmarks.pickle  conda.yml  dmask.py  helpers.py  install.sh  log.out  log2.out  main.py  plot_experiments.py  power_tradeoff.py  pybinder_tester.py  requirements.txt  results.json  rnn_torchviz  run.sh  run_all.sh  run_design_space.py  run_experiments.py  run_interconnect.py  run_sram.py  run_test.sh  run_tiny.sh  setup.sh
compiler/: array.cpp  array.hpp  bank.cpp  bank.hpp  compiler.cpp  compiler.hpp  cycle_model.cpp  dram.cpp  dram.hpp  dump_schedule.hpp  helper.hpp  interconnect.cpp  interconnect.hpp  layer.cpp  layer.hpp  logger_setup.hpp  main  main.cpp  ops.cpp  ops.hpp  ostream_mt.cpp  ostream_mt.hpp  parallel_linear_search.cpp  parallel_linear_search.hpp  post_processor.cpp  post_processor.hpp  print.hpp  pythonbinder.cpp  sosa_compiler  test.hpp  tests.cpp  tiles.cpp  tiles.hpp
compiler/interconnect/: banyan.hpp  benes.hpp  defs.hpp  exception.hpp  interconnect.hpp  multistage_interconnect.hpp  utility.hpp
plots/: analyze_ict.py  analyze_power.py  common.py  defs.py  plot_array_scale.py  plot_design_space.py  plot_exp.py  plot_helpers.py  plot_interconnect.py  plot_multibatch.py  plot_partition_size.py  result_utils.py
precompiler/: benchmarks.py  graph.py  precompile.py  systolic_model.py
precompiler/keras_bert/: bert.py
precompiler/keras_bert/optimizers/: warmup.py
precompiler/keras_bert_custom/: bert.py
precompiler/keras_bert_custom/layers/: inputs.py
precompiler/keras_transformer_custom/: transformer.py
